chore(deps): Update build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
 ext {
@@ -17,8 +17,24 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    // Spring
+    implementation 'org.springframework:spring-context:6.0.6'
+    implementation 'org.springframework:spring-tx:6.0.6'
+
+    // Spring Data
+    implementation 'org.springframework.data:spring-data-commons:3.1.1'
+
+    // MeiliSearch
+    implementation 'com.meilisearch.sdk:meilisearch-java:0.11.1'
+
+    // Jackson JSON Mapper
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+
+    // Test
+    testImplementation 'org.springframework:spring-test:6.0.6'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
 
 test {
