--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
+### MacOS ###
+.DS_Store
+
+### Spring Beans ###
+.springBeans
+
 ### gradle ###
 .gradle
 build
 
+### Eclipse ###
+.classpath
+.project
+.settings
+
 ### idea ###
 .idea
+*.iml
+*.ipr
+*.iws
