--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     // Spring Data
     implementation 'org.springframework.data:spring-data-commons:3.1.1'
 
-    // MeiliSearch
+    // Meilisearch
     implementation 'com.meilisearch.sdk:meilisearch-java:0.11.1'
 
     // Test
