--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'org.sonarqube' version '4.2.1.3168'
+    id 'jacoco'
 }
 
 ext {
@@ -42,10 +43,17 @@ test {
     useJUnitPlatform()
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
+
 sonar {
     properties {
         property 'sonar.host.url', 'https://sonarcloud.io'
         property 'sonar.organization', 'junghoon-ban'
         property 'sonar.projectKey', 'junghoon-vans_spring-data-meilisearch'
+        property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
     }
 }
