--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: >
-          mvn verify sonar:sonar -Pcoverage
+          mvn verify sonar:sonar -Pci
           -Dsonar.host.url=https://sonarcloud.io
           -Dsonar.organization=junghoon-ban
           -Dsonar.projectKey=spring-data-meilisearch
