--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,9 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-checkstyle-plugin</artifactId>
+            <configuration>
+              <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
+            </configuration>
             <executions>
               <execution>
                 <phase>verify</phase>
