--- a/pom.xml
+++ b/pom.xml
@@ -9,22 +9,21 @@
     <artifactId>spring-data-meilisearch</artifactId>
     <version>0.3.1-SNAPSHOT</version>
 
+    <parent>
+        <groupId>org.springframework.data.build</groupId>
+        <artifactId>spring-data-parent</artifactId>
+        <version>3.2.0-SNAPSHOT</version>
+    </parent>
+
     <name>Spring Data Meilisearch</name>
     <description>Spring Data Implementation for Meilisearch</description>
     <url>https://github.com/junghoon-vans/spring-data-meilisearch</url>
 
     <properties>
-        <!-- Compiler -->
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <!-- Dependencies -->
-        <spring>6.0.6</spring>
-        <springdata.commons>3.1.1</springdata.commons>
+        <springdata.commons>3.2.0-SNAPSHOT</springdata.commons>
         <meilisearch-java>0.11.1</meilisearch-java>
-        <jackson>2.15.1</jackson>
-        <slf4j-simple>2.0.0</slf4j-simple>
-        <junit-jupiter>5.9.2</junit-jupiter>
-        <assertj>3.21.0</assertj>
+
+        <java-module-name>spring.data.meilisearch</java-module-name>
     </properties>
 
     <developers>
@@ -40,13 +39,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>${spring}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
-            <version>${spring}</version>
         </dependency>
 
         <!-- SPRING DATA -->
@@ -63,50 +60,7 @@
             <version>${meilisearch-java}</version>
         </dependency>
 
-        <!-- Jackson JSON Mapper -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson}</version>
-        </dependency>
-
         <!-- Test -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${spring}</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>ch.qos.logback</groupId>
-                    <artifactId>logback-classic</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${slf4j-simple}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit-jupiter}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj}</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>io.vanslog</groupId>
             <artifactId>testcontainers-meilisearch</artifactId>
@@ -124,22 +78,6 @@
     </distributionManagement>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>3.3.0</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>com.puppycrawl.tools</groupId>
-                            <artifactId>checkstyle</artifactId>
-                            <version>10.12.2</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -247,7 +185,21 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-checkstyle-plugin</artifactId>
                         <configuration>
-                            <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
+                            <checkstyleRules>
+                                <module name="Checker">
+
+                                    <!-- Configure checker to use UTF-8 encoding -->
+                                    <property name="charset" value="UTF-8"/>
+
+                                    <module name="io.spring.nohttp.checkstyle.check.NoHttpCheck"/>
+                                </module>
+                            </checkstyleRules>
+                            <includes>**/*</includes>
+                            <excludes>
+                                .git/**/*,target/**/*,**/target/**/*,.idea/**/*,**/spring.schemas,**/*.svg,mvnw,mvnw.cmd,**/*.policy,
+                                **/spring.handlers,**/namespace.xml,**/*.xsd,pom.xml
+                            </excludes>
+                            <sourceDirectories>./</sourceDirectories>
                         </configuration>
                         <executions>
                             <execution>
@@ -263,13 +215,6 @@
         </profile>
     </profiles>
 
-    <licenses>
-        <license>
-            <name>Apache-2.0</name>
-            <url>https://opensource.org/licenses/Apache-2.0</url>
-        </license>
-    </licenses>
-
     <scm>
         <url>https://github.com/junghoon-vans/spring-data-meilisearch</url>
         <connection>scm:git:git://github.com/junghoon-vans/spring-data-meilisearch.git</connection>
@@ -280,4 +225,21 @@
         <system>GitHub</system>
         <url>https://github.com/junghoon-vans/spring-data-meilisearch/issues</url>
     </issueManagement>
+
+    <repositories>
+        <repository>
+            <id>spring-snapshot</id>
+            <url>https://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>spring-milestone</id>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+    </repositories>
 </project>
