Formatting reference documents

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,10 @@
                     </includes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
