--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
 
     <groupId>io.vanslog</groupId>
     <artifactId>spring-data-meilisearch</artifactId>
-    <version>0.4.0</version>
+    <version>0.4.1-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>3.1.3</version>
+        <version>3.2.0-SNAPSHOT</version>
     </parent>
 
     <name>Spring Data Meilisearch</name>
@@ -25,7 +25,7 @@
     </organization>
 
     <properties>
-        <springdata.commons>3.1.3</springdata.commons>
+        <springdata.commons>3.2.0-SNAPSHOT</springdata.commons>
         <meilisearch-java>0.11.1</meilisearch-java>
 
         <java-module-name>spring.data.meilisearch</java-module-name>
