Add search method to MeilisearchTemplate.

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,16 @@
             <version>${meilisearch-java}</version>
         </dependency>
 
+        <!-- Jackson JSON Mapper -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>io.vanslog</groupId>
