Make Github Actions using Maven Wrapper.
See #129

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,7 +32,7 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
       - name: Build reference documentation
-        run: mvn clean install -Pdistribute
+        run: ./mvnw clean install -Pdistribute
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
